--- a/FAGTB.ipynb
+++ b/FAGTB.ipynb
@@ -6,7 +6,8 @@
       "name": "FAGTB.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNMrH4jvyW09VMi2c/UUDuO",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOXfkKA4Xers2lZrtzar4r6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,12 +33,13 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 365
+          "height": 383
         },
-        "outputId": "ed174a10-9493-4c95-81a8-9cae1fb735fc"
+        "outputId": "2a956b49-14e0-4c47-9d66-0f4c562ce292"
       },
       "source": [
-        "!pip3 install fairness\n"
+        "!pip3 install fairness\n",
+        "! git clone https://github.com/vincent-grari/FAGTB"
       ],
       "execution_count": 1,
       "outputs": [
@@ -45,24 +47,25 @@
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: fairness in /usr/local/lib/python3.6/dist-packages (0.1.8)\n",
-            "Requirement already satisfied: wheel>=0.29.0 in /usr/local/lib/python3.6/dist-packages (from fairness) (0.34.2)\n",
-            "Requirement already satisfied: pyparsing>=2.1.4 in /usr/local/lib/python3.6/dist-packages (from fairness) (2.4.7)\n",
-            "Requirement already satisfied: scikit-learn>=0.18.1 in /usr/local/lib/python3.6/dist-packages (from fairness) (0.22.2.post1)\n",
-            "Requirement already satisfied: fire in /usr/local/lib/python3.6/dist-packages (from fairness) (0.3.1)\n",
-            "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from fairness) (1.4.1)\n",
-            "Requirement already satisfied: pandas>=0.21.1 in /usr/local/lib/python3.6/dist-packages (from fairness) (1.0.5)\n",
-            "Requirement already satisfied: python-dateutil>=2.6.0 in /usr/local/lib/python3.6/dist-packages (from fairness) (2.8.1)\n",
-            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.6/dist-packages (from fairness) (1.12.0)\n",
-            "Requirement already satisfied: BlackBoxAuditing>=0.1.26ggplot in /usr/local/lib/python3.6/dist-packages (from fairness) (0.1.54)\n",
             "Requirement already satisfied: pytz in /usr/local/lib/python3.6/dist-packages (from fairness) (2018.9)\n",
-            "Requirement already satisfied: numpy>=1.11.0 in /usr/local/lib/python3.6/dist-packages (from scikit-learn>=0.18.1->fairness) (1.18.5)\n",
+            "Requirement already satisfied: BlackBoxAuditing>=0.1.26ggplot in /usr/local/lib/python3.6/dist-packages (from fairness) (0.1.54)\n",
+            "Requirement already satisfied: pandas>=0.21.1 in /usr/local/lib/python3.6/dist-packages (from fairness) (1.0.5)\n",
+            "Requirement already satisfied: scikit-learn>=0.18.1 in /usr/local/lib/python3.6/dist-packages (from fairness) (0.22.2.post1)\n",
+            "Requirement already satisfied: wheel>=0.29.0 in /usr/local/lib/python3.6/dist-packages (from fairness) (0.34.2)\n",
+            "Requirement already satisfied: python-dateutil>=2.6.0 in /usr/local/lib/python3.6/dist-packages (from fairness) (2.8.1)\n",
+            "Requirement already satisfied: pyparsing>=2.1.4 in /usr/local/lib/python3.6/dist-packages (from fairness) (2.4.7)\n",
+            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.6/dist-packages (from fairness) (1.12.0)\n",
+            "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from fairness) (1.4.1)\n",
+            "Requirement already satisfied: fire in /usr/local/lib/python3.6/dist-packages (from fairness) (0.3.1)\n",
+            "Requirement already satisfied: networkx in /usr/local/lib/python3.6/dist-packages (from BlackBoxAuditing>=0.1.26ggplot->fairness) (2.4)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.6/dist-packages (from BlackBoxAuditing>=0.1.26ggplot->fairness) (3.2.2)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from BlackBoxAuditing>=0.1.26ggplot->fairness) (1.18.5)\n",
             "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn>=0.18.1->fairness) (0.15.1)\n",
             "Requirement already satisfied: termcolor in /usr/local/lib/python3.6/dist-packages (from fire->fairness) (1.1.0)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.6/dist-packages (from BlackBoxAuditing>=0.1.26ggplot->fairness) (3.2.2)\n",
-            "Requirement already satisfied: networkx in /usr/local/lib/python3.6/dist-packages (from BlackBoxAuditing>=0.1.26ggplot->fairness) (2.4)\n",
+            "Requirement already satisfied: decorator>=4.3.0 in /usr/local/lib/python3.6/dist-packages (from networkx->BlackBoxAuditing>=0.1.26ggplot->fairness) (4.4.2)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib->BlackBoxAuditing>=0.1.26ggplot->fairness) (0.10.0)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->BlackBoxAuditing>=0.1.26ggplot->fairness) (1.2.0)\n",
-            "Requirement already satisfied: decorator>=4.3.0 in /usr/local/lib/python3.6/dist-packages (from networkx->BlackBoxAuditing>=0.1.26ggplot->fairness) (4.4.2)\n"
+            "fatal: destination path 'FAGTB' already exists and is not an empty directory.\n"
           ],
           "name": "stdout"
         }
@@ -77,26 +80,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "57f05106-740e-4316-fdb5-7633984d2c9e"
+        "outputId": "d260ee67-84d7-4756-c968-ff0e99f7a092"
       },
       "source": [
         "import urllib.request\n",
         "urllib.request.urlretrieve('http://grari.fr/Fairness/ProcessedData.py', '/usr/local/lib/python3.6/dist-packages/fairness/data/objects/ProcessedData.py')"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "('/usr/local/lib/python3.6/dist-packages/fairness/data/objects/ProcessedData.py',\n",
-              " <http.client.HTTPMessage at 0x7f3ce0e23908>)"
+              " <http.client.HTTPMessage at 0x7f12d2ea1cf8>)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 2
         }
       ]
     },
@@ -105,7 +108,11 @@
       "metadata": {
         "id": "wNxgkEwlE0-I",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 363
+        },
+        "outputId": "eaff1df9-5024-4c6a-b2c5-34ee2a869c4a"
       },
       "source": [
         "import fire\n",
@@ -216,54 +223,48 @@
         "\n",
         "    X_train = X_train.drop(columns_delete,1)\n",
         "    X_test = X_test.drop(columns_delete,1)\n",
-        "    return X_train, X_test, y_train, y_test, sensitive, sensitivet\n",
-        "\n",
-        "\n",
-        "def DATA_TRAIN_TEST2(num,sens,y,columns_delete,scaling):\n",
-        "    dataset = DATASETS[num] # Adult data set\n",
-        "    all_sensitive_attributes = dataset.get_sensitive_attributes_with_joint()\n",
-        "    ProcessedData(dataset)\n",
-        "    processed_dataset = ProcessedData(dataset)\n",
-        "    train_test_splits = processed_dataset.create_train_test_splits(1)\n",
-        "    train_test_splits.keys()\n",
-        "    train, test = train_test_splits['numerical-binsensitive'][0]\n",
-        "    #all_sensitive_attributes = dataset.get_sensitive_attributes_with_joint()\n",
-        "    #for supported_tag in algorithm.get_supported_data_types():\n",
-        "    supported_tag = 'numerical-binsensitive'\n",
-        "    privileged_vals = dataset.get_privileged_class_names_with_joint(supported_tag)\n",
-        "    positive_val = dataset.get_positive_class_val(supported_tag)\n",
-        "    sensitive = sens\n",
-        "    print(\"===================================\")\n",
-        "    print(\"supported tag: \" + supported_tag)\n",
-        "    print(\"sensitive attribute: \" + sensitive)\n",
-        "    print(\"===================================\")\n",
-        "    if scaling :\n",
-        "        scaler = StandardScaler().fit(train)\n",
-        "        s=train[sens]\n",
-        "        st=test[sens]\n",
-        "        t=train[y]\n",
-        "        tt=test[y]\n",
-        "        scale_df = lambda df, scaler: pd.DataFrame(scaler.transform(df), columns=df.columns, index=df.index)\n",
-        "        train = train.pipe(scale_df, scaler)\n",
-        "        test = test.pipe(scale_df, scaler)\n",
-        "        train= train.drop(columns_delete, axis=1)\n",
-        "        train[sens] = s\n",
-        "        train[y] = t\n",
-        "        test= test.drop(columns_delete, axis=1)\n",
-        "        test[sens] = st\n",
-        "        test[y] = tt\n",
-        "\n",
-        "    return train, test, dataset, all_sensitive_attributes, sensitive, privileged_vals, positive_val\n"
+        "    return X_train, X_test, y_train, y_test, sensitive, sensitivet"
       ],
-      "execution_count": 5,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Available algorithms:\n",
+            "  SVM\n",
+            "  GaussianNB\n",
+            "  LR\n",
+            "  DecisionTree\n",
+            "  Kamishima\n",
+            "  Calders\n",
+            "  ZafarBaseline\n",
+            "  ZafarFairness\n",
+            "  ZafarAccuracy\n",
+            "  Kamishima-accuracy\n",
+            "  Kamishima-DIavgall\n",
+            "  Feldman-SVM\n",
+            "  Feldman-GaussianNB\n",
+            "  Feldman-LR\n",
+            "  Feldman-DecisionTree\n",
+            "  Feldman-SVM-DIavgall\n",
+            "  Feldman-SVM-accuracy\n",
+            "  Feldman-GaussianNB-DIavgall\n",
+            "  Feldman-GaussianNB-accuracy\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Gc9BzZv7FFHC",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        },
+        "outputId": "a276c898-6689-44d0-d886-c5c9844cd012"
       },
       "source": [
         "    \n",
@@ -335,18 +336,15 @@
         "    \n",
         "            y2 = np.expand_dims(sensitive, axis=1)\n",
         "    \n",
-        "            #for i in range(200):\n",
-        "            #    clf.fit(y,sensitive,1)\n",
         "            lfadv =0\n",
         "    \n",
         "            self.Init = np.log(np.sum(y)/np.sum(1-y))\n",
-        "            #self.Init = np.mean(y)\n",
+        "\n",
         "            y_pred2 = np.full(np.shape(y), self.Init)\n",
         "            y_pred = np.full(np.shape(y), self.Init)\n",
         "            y_predt = np.full(np.shape(yt), self.Init)\n",
         "            t =np.full(np.shape(y), 0)\n",
         "            t2 =np.full(np.shape(yt), 0)\n",
-        "    #        self.clfs.append(clf)\n",
         "            self.LAMBDA = LAMBDA\n",
         "            proj = 0\n",
         "            table = [0,0,0,0]\n",
@@ -355,12 +353,10 @@
         "            graph = tf.Graph()\n",
         "            seed = 7 # for reproducible purpose\n",
         "            input_size =  1 # number of features\n",
-        "            #epochs = 2# I've tested previously that this is the best epochs to avoid overfitting\n",
+        "\n",
         "            learning_rate2 = 0.01\n",
         "            with graph.as_default():\n",
-        "                #tf.set_random_seed(seed)\n",
-        "                #np.random.seed(seed)\n",
-        "            \n",
+        "\n",
         "                X_input = tf.placeholder(dtype=tf.float32, shape=[None, input_size], name='X_input')\n",
         "                y_input = tf.placeholder(dtype=tf.float32, shape=[None, 1], name='y_input')\n",
         "                \n",
@@ -506,8 +502,18 @@
         "            return 2*self.param\n",
         "        "
       ],
-      "execution_count": 14,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/compat/v2_compat.py:96: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "non-resource variables are not supported in the long term\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -570,8 +576,7 @@
         "table = [0,0,0,0]\n",
         "for i in range(5):\n",
         "    X_train, X_test, y_train, y_test, sensitive, sensitivet = DATA_TRAIN_TEST(1,'sex',\"income-per-year\",['sex','income-per-year','race-sex']) #,'race','race-sex','sex'\n",
-        "    #X_train, X_test, y_train, y_test, sensitive, sensitivet = DATA_TRAIN_TEST(3,'race',\"two_year_recid\",['two_year_recid','sex','sex-race','race'])\n",
-        "    \n",
+        "   \n",
         "    classifier= FAGTB(n_estimators=260, learning_rate = 0.01, max_depth = 10,min_samples_split=1.0, min_impurity =False, max_features =20, regression =1)\n",
         "    y_pred = classifier.fit(X_train.values, y_train.values, sensitive, LAMBDA=0.165, Xtest=X_test.values, yt=y_test,\n",
         "                      sensitivet=sensitivet)\n",
@@ -580,7 +585,6 @@
         "    y_predt2 = classifier.predict(X_test.values)\n",
         "    print('')\n",
         "    print('Results on test set :')\n",
-        "    #display_results(y_predt2, y_test.values, sensitivet)\n",
         "    Res = display_results(y_predt2, y_test.values, sensitivet)\n",
         "    table = np.vstack([table,[Res['Accuracy']*100,Res['PRULE'],Res['DispFPR'],Res['DispFNR']]])\n",
         "np.savetxt(sys.stdout, np.mean(table[1:,], axis=0).astype(float), '%5.2f')\n"
