--- a/FAGTB.ipynb
+++ b/FAGTB.ipynb
@@ -41,11 +41,7 @@
       "metadata": {
         "id": "YI1Cg2-TmFpk",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 400
-        },
-        "outputId": "12baf216-b30e-40f4-b4be-0880432fdde2"
+        "colab": {}
       },
       "source": [
         "!pip3 install fairness\n",
@@ -54,36 +50,8 @@
         "!bash -c '/content/FAGTB/ProcessedData.py', '/usr/local/lib/python3.6/dist-packages/fairness/data/objects/ProcessedData.py'\n",
         "sys.path.append('FAGTB')"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: fairness in /usr/local/lib/python3.6/dist-packages (0.1.8)\n",
-            "Requirement already satisfied: scikit-learn>=0.18.1 in /usr/local/lib/python3.6/dist-packages (from fairness) (0.22.2.post1)\n",
-            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.6/dist-packages (from fairness) (1.12.0)\n",
-            "Requirement already satisfied: pyparsing>=2.1.4 in /usr/local/lib/python3.6/dist-packages (from fairness) (2.4.7)\n",
-            "Requirement already satisfied: pandas>=0.21.1 in /usr/local/lib/python3.6/dist-packages (from fairness) (1.0.5)\n",
-            "Requirement already satisfied: fire in /usr/local/lib/python3.6/dist-packages (from fairness) (0.3.1)\n",
-            "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from fairness) (1.4.1)\n",
-            "Requirement already satisfied: python-dateutil>=2.6.0 in /usr/local/lib/python3.6/dist-packages (from fairness) (2.8.1)\n",
-            "Requirement already satisfied: BlackBoxAuditing>=0.1.26ggplot in /usr/local/lib/python3.6/dist-packages (from fairness) (0.1.54)\n",
-            "Requirement already satisfied: pytz in /usr/local/lib/python3.6/dist-packages (from fairness) (2018.9)\n",
-            "Requirement already satisfied: wheel>=0.29.0 in /usr/local/lib/python3.6/dist-packages (from fairness) (0.34.2)\n",
-            "Requirement already satisfied: numpy>=1.11.0 in /usr/local/lib/python3.6/dist-packages (from scikit-learn>=0.18.1->fairness) (1.18.5)\n",
-            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn>=0.18.1->fairness) (0.15.1)\n",
-            "Requirement already satisfied: termcolor in /usr/local/lib/python3.6/dist-packages (from fire->fairness) (1.1.0)\n",
-            "Requirement already satisfied: networkx in /usr/local/lib/python3.6/dist-packages (from BlackBoxAuditing>=0.1.26ggplot->fairness) (2.4)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.6/dist-packages (from BlackBoxAuditing>=0.1.26ggplot->fairness) (3.2.2)\n",
-            "Requirement already satisfied: decorator>=4.3.0 in /usr/local/lib/python3.6/dist-packages (from networkx->BlackBoxAuditing>=0.1.26ggplot->fairness) (4.4.2)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->BlackBoxAuditing>=0.1.26ggplot->fairness) (1.2.0)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib->BlackBoxAuditing>=0.1.26ggplot->fairness) (0.10.0)\n",
-            "fatal: destination path 'FAGTB' already exists and is not an empty directory.\n",
-            "/usr/local/lib/python3.6/dist-packages/fairness/data/objects/ProcessedData.py: /content/FAGTB/ProcessedData.py,: No such file or directory\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -100,47 +68,13 @@
       "metadata": {
         "id": "wNxgkEwlE0-I",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 435
-        },
-        "outputId": "0331313d-88aa-413a-a690-342ec5e429b2"
+        "colab": {}
       },
       "source": [
         "from functions import *"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Available algorithms:\n",
-            "  SVM\n",
-            "  GaussianNB\n",
-            "  LR\n",
-            "  DecisionTree\n",
-            "  Kamishima\n",
-            "  Calders\n",
-            "  ZafarBaseline\n",
-            "  ZafarFairness\n",
-            "  ZafarAccuracy\n",
-            "  Kamishima-accuracy\n",
-            "  Kamishima-DIavgall\n",
-            "  Feldman-SVM\n",
-            "  Feldman-GaussianNB\n",
-            "  Feldman-LR\n",
-            "  Feldman-DecisionTree\n",
-            "  Feldman-SVM-DIavgall\n",
-            "  Feldman-SVM-accuracy\n",
-            "  Feldman-GaussianNB-DIavgall\n",
-            "  Feldman-GaussianNB-accuracy\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/compat/v2_compat.py:96: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "non-resource variables are not supported in the long term\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
