--- a/FAGTB.ipynb
+++ b/FAGTB.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNgnlGA8pu64GlEncd73uXJ",
+      "authorship_tag": "ABX9TyNhKOxdBNZP/xxLwhXZAYfm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -137,6 +137,47 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-LRsHykAtKtM",
+        "colab_type": "text"
+      },
+      "source": [
+        "Results for Funfair FAGTB"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ww8ncO-btKLp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "b6eb4fcf-d31e-4751-bf73-f3f213b3ee8e"
+      },
+      "source": [
+        "np.set_printoptions(suppress=True) \n",
+        "np.mean(table[1:,], axis=0).astype(float)"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([86.74656853, 31.88873801,  0.06260405,  0.07074619])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 41
+        }
+      ]
     },
     {
       "cell_type": "code",
