--- a/FAGTB.ipynb
+++ b/FAGTB.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNhKOxdBNZP/xxLwhXZAYfm",
+      "authorship_tag": "ABX9TyPJOBaCGISSwCZQzYnTB4r2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,7 +145,11 @@
         "colab_type": "text"
       },
       "source": [
-        "Results for Funfair FAGTB"
+        "Results for Funfair FAGTB\n",
+        "\n",
+        "> The results correspond in the following order: Accuracy, PRULE, DispFPR, DispFNR)\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -307,7 +311,9 @@
         "colab_type": "text"
       },
       "source": [
-        "Results for FAGTB with logistic regression on Adversarial"
+        "Results for FAGTB with logistic regression on Adversarial\n",
+        "\n",
+        "> The results correspond in the following order: Accuracy, PRULE, DispFPR, DispFNR)\n"
       ]
     },
     {
